# kde-odf-thumnail

./: CMakeLists.txt  README
src/: CMakeLists.txt  opendocumentcreator.cpp  opendocumentcreator.h  opendocumentthumbnail.desktop  opendocumentthumbnail.qrc
